--- a/_theme_files/not-found.html
+++ b/_theme_files/not-found.html
@@ -16,15 +16,15 @@
   </head>
   <body>
     <nav class="bg-green-700 border-b border-green-500">
-      <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-        <div class="flex h-20 items-center justify-between">
+      <div class="px-2 mx-auto max-w-7xl sm:px-6 lg:px-8">
+        <div class="flex items-center justify-between h-20">
           <div
-            class="flex flex-1 items-center justify-center md:items-stretch md:justify-start"
+            class="flex items-center justify-center flex-1 md:items-stretch md:justify-start"
           >
             <!-- Logo -->
-            <a class="flex flex-shrink-0 items-center mr-4" href="index.html">
-              <img class="h-10 w-auto" src="images/logo.png" alt="Vue Jobs" />
-              <span class="hidden md:block text-white text-2xl font-bold ml-2"
+            <a class="flex items-center flex-shrink-0 mr-4" href="index.html">
+              <img class="w-auto h-10" src="images/logo.png" alt="Vue Jobs" />
+              <span class="hidden ml-2 text-2xl font-bold text-white md:block"
                 >Vue Jobs</span
               >
             </a>
@@ -32,17 +32,17 @@
               <div class="flex space-x-2">
                 <a
                   href="index.html"
-                  class="text-white hover:bg-gray-900 hover:text-white rounded-md px-3 py-2"
+                  class="px-3 py-2 text-white rounded-md hover:bg-gray-900 hover:text-white"
                   >Home</a
                 >
                 <a
                   href="jobs.html"
-                  class="text-white hover:bg-gray-900 hover:text-white rounded-md px-3 py-2"
+                  class="px-3 py-2 text-white rounded-md hover:bg-gray-900 hover:text-white"
                   >Jobs</a
                 >
                 <a
                   href="add-job.html"
-                  class="text-white hover:bg-gray-900 hover:text-white rounded-md px-3 py-2"
+                  class="px-3 py-2 text-white rounded-md hover:bg-gray-900 hover:text-white"
                   >Add Job</a
                 >
               </div>
@@ -52,13 +52,13 @@
       </div>
     </nav>
 
-    <section class="text-center flex flex-col justify-center items-center h-96">
-      <i class="fas fa-exclamation-triangle text-yellow-400 fa-4x mb-4"></i>
-      <h1 class="text-6xl font-bold mb-4">404 Not Found</h1>
-      <p class="text-xl mb-5">This page does not exist</p>
+    <section class="flex flex-col items-center justify-center text-center h-96">
+      <i class="mb-4 text-yellow-400 fas fa-exclamation-triangle fa-4x"></i>
+      <h1 class="mb-4 text-6xl font-bold">404 Not Found</h1>
+      <p class="mb-5 text-xl">This page does not exist</p>
       <a
         href="index.html"
-        class="text-white bg-green-700 hover:bg-green-900 rounded-md px-3 py-2 mt-4"
+        class="px-3 py-2 mt-4 text-white bg-green-700 rounded-md hover:bg-green-900"
         >Go Back</a
       >
     </section>
